<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">Yamba</string>
    <string name="actionSettings">Settings</string>
    <string name="hintText">What do you want to say to the world?</string>
    <string name="buttonUpdate">Go</string>
    <string name="titleTweet">Be Heard</string>
    <string name="titleUsername">Username</string>
    <string name="summaryUsername">This is the username.</string>
    <string name="titlePassword">Password</string>
    <string name="summaryPassword">This is the password.</string>
    <string name="titleApiRoot">API Root</string>
    <string name="summaryApiRoot">This is the API root.</string>
    <string name="titleSettings">Settings</string>
    <string name="titlePurge">Purge</string>
    <string name="titleServiceStart">Start Updater</string>
    <string name="titleServiceStop">Stop Updater</string>
    <string name="titleTimeline">Timeline</string>
    <string name="rowTextUser">Nobody</string>
    <string name="rowTextCreatedAt">Whenever</string>
    <string name="rowTextTweet">Tweets to here..</string>
    <string name="msgSetupPrefs">Set login preferences</string>
    <string name="msgAllDataPurged">All data purged</string>
    
</resources>