<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rowTextUser"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textCreatedAt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/rowTextCreatedAt" />
    </LinearLayout>

    <TextView
        android:id="@+id/textText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rowTextTweet" />

</LinearLayout>