<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/moredonuts"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TweetActivity" >
  
  <!-- Title TextView-->
  <TextView android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:gravity="center"
    android:textSize="30sp"
    android:textColor="@android:color/white"
    android:layout_margin="10dp" 
    android:background="#f000"
    android:text="@string/titleTweet"/>
  <!-- Status EditText  -->

  <EditText
    android:id="@+id/remainingCharacters"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:gravity="right|center_vertical"
    android:inputType="numberSigned"
    android:background="#f000"
    android:text="" >
  </EditText>

  <EditText android:layout_width="match_parent"
    android:layout_height="0dp" 
    android:layout_weight="1"
    android:hint="@string/hintText" 
    android:id="@+id/editText"
    android:background="#dfff"
    android:gravity="top|center_horizontal">
    <requestFocus />
  </EditText>
  <!-- Update Button -->

  <Button android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:text="@string/buttonUpdate"
    android:textSize="20sp" android:id="@+id/buttonTweet"></Button>
</LinearLayout>